--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,6 @@ jobs:
         key: ${{ secrets.AZURE_SSH_KEY }}
         port: ${{ secrets.AZURE_PORT }}
         script: |
-          cd /home/${{ secrets.AZURE_USERNAME }}/app
+          cd /home/${{ secrets.AZURE_USERNAME }}/test_for_GIT_WORKFLOW
           pkill streamlit || true
           nohup streamlit run euro_streamlit_interface.py --server.port 8501 &
